--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,21 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    transition: 1s;
+}
 @layer base {
     input[type='checkbox']{
-        @apply accent-[#A4FFAF]
+        @apply accent-[#A4FFAF];
+    }
+    @media(width >= 1280px){
+        input[type='checkbox']{
+            width: 20px;
+            height: 20px;
+        }
     }
 }
+
 
 input[type='range']::-webkit-slider-thumb{
     -webkit-appearance: none;
@@ -18,3 +28,4 @@ input[type='range']::-webkit-slider-thumb{
     border-radius: 50%;
     cursor: pointer;
 }
+
